# qr_code

./: pyproject.toml  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
scripts/: deploy.sh
src/: main.py
