[tool.poetry]
name = "qr-code"
version = "0.1.0"
description = "generates and serves QR codes"
authors = ["znas <31381226+znas-io@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
